# clibear

./: .gitignore  .gitlab-ci.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
clibear/: base.py
clibear/tests/unit/: test_base.py
