[metadata]
name = clibear
summary = CLI unility for backup your config files
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: Linux/Unix
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = methody
author-email = esikachov@gmail.com

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    clibear

data_files =
    etc/clibear = etc/*

[entry_points]
console_scripts =
    clibear = clibear.base:main
